--- a/app/profile/Profile.module.css
+++ b/app/profile/Profile.module.css
@@ -36,7 +36,7 @@
 }
 .backBtnPC {
   position: absolute;
-  top: 200px;
+  top: 220px;
   left: 40px;
   background: transparent;
   border: none;
@@ -245,6 +245,9 @@
 
   .main {
     padding: 1rem;
+  }
+  .backBtnPC{
+    display:none
   }
 
   .saveButton {
