--- a/app/css/NewsSection.module.css
+++ b/app/css/NewsSection.module.css
@@ -54,6 +54,7 @@
 @media screen and (max-width: 430px) {
   .section{
     padding: 24px 0px;
+    padding-left: 5px;
     /* padding-right:20px;   */
   }
   .Newgrid {
