--- a/app/css/Footer.module.css
+++ b/app/css/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #fe68a7;
   padding: 40px 20px;
-  font-family: Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #fff;
   position: sticky;
   margin-top: auto;
