--- a/app/css/HeaderSearch.module.css
+++ b/app/css/HeaderSearch.module.css
@@ -1,6 +1,6 @@
 /* === Base Styles === */
 .header {
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
   position: fixed;
   top: 0;
   left: 0;
