--- a/app/profile/orders/orders.module.css
+++ b/app/profile/orders/orders.module.css
@@ -3,7 +3,7 @@
   max-width: 900px;
   margin: auto;
   padding: 20px;
-  font-family: Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 /* Tiêu đề */
