--- a/app/css/Chatbot.module.css
+++ b/app/css/Chatbot.module.css
@@ -53,7 +53,7 @@
   overflow: hidden;
   z-index: 9999;
   animation: popFadeIn 0.25s ease-out;
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 @keyframes popFadeIn {
