--- a/app/css/IntroSlider.module.css
+++ b/app/css/IntroSlider.module.css
@@ -43,7 +43,7 @@
   margin-bottom: 24px;
   color: #2f2f2f;
   /* font-weight: 500; */
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .button {
@@ -237,10 +237,7 @@
     /* width: 50%; */
     /* width: 50%; */
   }
-  .imageWrapper{
-    /* border-radius: 40%; */
-    /* width: 100%; */
-  }
+  
   .left p {
     font-size: 0.85rem;
   }
