--- a/app/profile/address/Address.module.css
+++ b/app/profile/address/Address.module.css
@@ -2,7 +2,7 @@
   padding: 24px;
   max-width: 800px;
   margin: 0 auto;
-  font-family: "Inter", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .header {
