--- a/app/blog/[slug]/BlogDetail.module.css
+++ b/app/blog/[slug]/BlogDetail.module.css
@@ -73,10 +73,10 @@
 
 .relatedGrid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   /* width: 100%; */
-  gap: 20px;
+  /* gap: 10px; */
   justify-content: center;
   align-items: stretch;
-  padding: 10px;
+  /* padding: 10px; */
 }
