--- a/app/css/Footer.module.css
+++ b/app/css/Footer.module.css
@@ -12,7 +12,7 @@
 .contact {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 30px;
+  gap: 30px;  
   margin: 0 auto;
   max-width: 1200px;
   margin-right: 50px;
@@ -26,9 +26,9 @@
 }
 
 .logoImage {
-  max-width: 140px;
+  max-width: 110px;
   height: auto;
-  margin-bottom: 12px;
+  /* margin-bottom: 12px; */
 }
 
 .address p {
